--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div class="grid-2">
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
             <div class="cap">
               <div class="en">Garden Lawn & Panorama</div>
               <div class="jp">大きな芝庭の先には小高い丘と大きな空が広がる軽井沢でも稀有な眺望を有します。</div>
@@ -122,7 +122,7 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
             <div class="cap">
               <div class="en">4BR + Parking for 3</div>
               <div class="jp">家族＋ゲスト、＋ご両親といったニーズにこたえる間取りとスペースをご用意しています。</div>
@@ -130,7 +130,7 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
             <div class="cap">
               <div class="en">Hotel-like Wet Areas</div>
               <div class="jp">家族みんなで使ったり、ベッドルーム専用となったり可変する水回りを2か所ご用意しています。</div>
@@ -138,7 +138,7 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
             <div class="cap">
               <div class="en">For Active Days</div>
               <div class="jp">外部収納や自転車も置ける広い玄関、庭のバーベキュースペースなど、軽井沢でのアクティビティを愉しむ工夫を施しています。</div>
@@ -146,7 +146,7 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature5.jpg" alt="確かな施工監修"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
             <div class="cap">
               <div class="en">Trusted Construction Oversight</div>
               <div class="jp">設計者自身が土地の選定、設計から施工までを一貫監修し、品質を担保。</div>
@@ -154,7 +154,7 @@
           </article>
 
           <article class="feat card">
-            <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
+            <figure class="ratio"><img loading="lazy" src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
               <div class="en">Location</div>
               <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
