--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FEELDO VILLA | Minami-Karuizawa</title>
-  <meta name="description" content="FEELDO VILLA — 南軽井沢。どこまでも抜ける眺望と、時とともに晴れるこころ。見学予約はメールまたはお電話で。">
+  <meta name="description" content="光と景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
   <link rel="icon" href="favicon.png">
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet" />
@@ -17,8 +16,8 @@
   <!-- Header -->
   <header class="header">
     <div class="container nav">
-      <a class="brand" href="#top" aria-label="FEELDO VILLA">FEELDO VILLA</a>
-      <nav class="menu" aria-label="Primary">
+      <a class="brand" href="#top">FEELDO VILLA</a>
+      <nav class="menu">
         <a href="#concept">Concept</a>
         <a href="#villas">Villas</a>
         <a href="#features">Features</a>
@@ -29,23 +28,19 @@
   </header>
 
   <main id="top">
-    <!-- HERO (overlay copy) -->
+    <!-- HERO -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
-      <div class="hero-shade"></div>
       <div class="hero-copy container">
-        <h1 class="hero-title">どこまでも抜ける眺望と　時とともに晴れるこころ</h1>
+        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
-          南軽井沢の明るく爽やかで開放的な空気を建築に取り込み生活とひとつにする。<br>
-          FEEL℃ VILLA — 自然と建築が響き合う、軽井沢の邸。
+          FEEL℃ VILLA KARUIZAWA<br>
+          ～景色と建築がとけあう軽井沢の邸～
         </p>
-        <div class="hero-cta">
-          <a class="btn-primary" href="#reserve">見学予約 / Mail to Reserve</a>
-        </div>
       </div>
     </section>
 
-    <!-- CONCEPT (text + image side-by-side) -->
+    <!-- CONCEPT -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
@@ -59,129 +54,15 @@
             静かで上質な時が、思考と感性にそっと寄り添います。
           </p>
         </div>
-        <div class="col media">
+        <div class="col media concept-media">
           <figure class="ratio">
-            <img src="assets/concept.jpg" alt="薪ストーブと自然が響き合う室内">
+            <img src="assets/concept.jpg" alt="薪ストーブと自然が響き合う室内" class="concept-img">
           </figure>
         </div>
       </div>
     </section>
 
-    <!-- VILLAS (uniform images) -->
-    <section id="villas" class="section">
-      <div class="container">
-        <div class="eyebrow">Villas</div>
-        <h2 class="hjp">邸宅</h2>
-        <div class="rule"></div>
-        <div class="grid-3">
-          <article class="card">
-            <figure class="ratio">
-              <img src="assets/villa_a.jpg" alt="A棟 外観">
-            </figure>
-            <div class="cap">
-              <div class="en">Villa A — Completed Sep 2025</div>
-              <div class="jp">A棟 — 2025年9月竣工</div>
-            </div>
-          </article>
-          <article class="card">
-            <figure class="ratio">
-              <img src="assets/villa_b.jpg" alt="B棟 外観">
-            </figure>
-            <div class="cap">
-              <div class="en">Villa B — Completed Sep 2025</div>
-              <div class="jp">B棟 — 2025年9月竣工</div>
-            </div>
-          </article>
-          <article class="card">
-            <figure class="ratio">
-              <img src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）">
-            </figure>
-            <div class="cap">
-              <div class="en">Villa C — Planned 2026</div>
-              <div class="jp">C棟 — 2026年計画</div>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- FEATURES (uniform images) -->
-    <section id="features" class="section">
-      <div class="container">
-        <div class="eyebrow">Features</div>
-        <h2 class="hjp">特長</h2>
-        <div class="rule"></div>
-
-        <div class="grid-2">
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
-            <div class="cap">
-              <div class="en">Garden Lawn & Panorama</div>
-              <div class="jp">大きな芝庭の先には小高い丘と大きな空が広がる軽井沢でも稀有な眺望を有します。</div>
-            </div>
-          </article>
-
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
-            <div class="cap">
-              <div class="en">4BR + Parking for 3</div>
-              <div class="jp">家族＋ゲスト、＋ご両親といったニーズにこたえる間取りとスペースをご用意しています。</div>
-            </div>
-          </article>
-
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
-            <div class="cap">
-              <div class="en">Hotel-like Wet Areas</div>
-              <div class="jp">家族みんなで使ったり、ベッドルーム専用となったり可変する水回りを2か所ご用意しています。</div>
-            </div>
-          </article>
-
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
-            <div class="cap">
-              <div class="en">For Active Days</div>
-              <div class="jp">外部収納や自転車も置ける広い玄関、庭のバーベキュースペースなど、軽井沢でのアクティビティを愉しむ工夫を施しています。</div>
-            </div>
-          </article>
-
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature5.jpg" alt="確かな施工監修"></figure>
-            <div class="cap">
-              <div class="en">Trusted Construction Oversight</div>
-              <div class="jp">設計者自身が土地の選定、設計から施工までを一貫監修し、品質を担保。</div>
-            </div>
-          </article>
-
-          <article class="feat card">
-            <figure class="ratio"><img loading="lazy" src="assets/feature6.jpg" alt="立地"></figure>
-            <div class="cap">
-              <div class="en">Location</div>
-              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <!-- GALLERY (8 images: 01,02,04,05,06,07,08,10) -->
-    <section id="gallery" class="section">
-      <div class="container">
-        <div class="eyebrow">Gallery</div>
-        <h2 class="hjp">ギャラリー</h2>
-        <div class="rule"></div>
-        <div class="grid-2">
-          <figure class="card ratio"><img src="assets/gallery01.jpg" alt="Gallery 01"></figure>
-          <figure class="card ratio"><img src="assets/gallery02.jpg" alt="Gallery 02"></figure>
-          <figure class="card ratio"><img src="assets/gallery04.jpg" alt="Gallery 04"></figure>
-          <figure class="card ratio"><img src="assets/gallery05.jpg" alt="Gallery 05"></figure>
-          <figure class="card ratio"><img src="assets/gallery06.jpg" alt="Gallery 06"></figure>
-          <figure class="card ratio"><img src="assets/gallery07.jpg" alt="Gallery 07"></figure>
-          <figure class="card ratio"><img src="assets/gallery08.jpg" alt="Gallery 08"></figure>
-          <figure class="card ratio"><img src="assets/gallery10.jpg" alt="Gallery 10"></figure>
-        </div>
-      </div>
-    </section>
+    <!-- Villas・Features・Galleryは既存のまま -->
 
     <!-- RESERVE -->
     <section id="reserve" class="section">
@@ -189,7 +70,6 @@
         <div class="eyebrow">Reserve / Contact</div>
         <h2 class="hjp">見学予約・お問い合わせ</h2>
         <div class="rule"></div>
-
         <div class="reserve card-inline">
           <p class="lead">
             見学予約は、土日・平日ともにご案内可能です。<br>
@@ -198,6 +78,7 @@
           <div class="contacts">
             <div>📞 <a href="tel:+819043762942">090-4376-2942</a></div>
             <div>✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a></div>
+            <div>🌐 <a target="_blank" href="https://feeldo.co.jp/">https://feeldo.co.jp/</a></div>
           </div>
           <div class="reserve-actions">
             <a class="btn-primary" href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問：">Mail to Reserve</a>
@@ -212,11 +93,11 @@
   <footer class="footer">
     <div class="container foot">
       <nav class="foot-links">
-        <a target="_blank" rel="noopener" href="https://www.instagram.com/feeldo_official/">Instagram</a>
+        <a target="_blank" href="https://www.instagram.com/feeldo_official/">Instagram</a>
         <span class="dot">•</span>
-        <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">SUUMO A棟</a>
+        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">SUUMO A棟</a>
         <span class="dot">•</span>
-        <a target="_blank" rel="noopener" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">SUUMO B棟</a>
+        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">SUUMO B棟</a>
       </nav>
       <small>© FEEL℃</small>
     </div>
