--- a/index.html
+++ b/index.html
@@ -32,11 +32,16 @@
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
-        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
+        <h1 class="hero-title">
+          光と景色がひらける。心が晴れる。
+        </h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
           ～景色と建築がとけあう軽井沢の邸～
         </p>
+        <div class="hero-cta">
+          <a class="btn-hero" href="#reserve">見学予約 / Mail to Reserve</a>
+        </div>
       </div>
     </section>
 
@@ -62,7 +67,7 @@
       </div>
     </section>
 
-    <!-- Villas・Features・Galleryは既存のまま -->
+    <!-- 以下 VILLAS・FEATURES・GALLERY は既存のまま -->
 
     <!-- RESERVE -->
     <section id="reserve" class="section">
