--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
           <h2 class="hjp">コンセプト</h2>
           <div class="rule"></div>
           <p class="lead">
-            こころをほどき　ときをあむ。<br>
-            晴れた昼下がり、風に誘われ庭で遊ぶ。夜はテラスで星を仰ぐ。薪ストーブの炎が静かに夜をあたためる。<br>
-            都会とは異なる時間軸の中で、思索し、癒され、本来の自分に還る。<br>
-            静かで上質な時が、思考と感性にそっと寄り添います。
+            こころをほどき　ときをあむ<br>
+            晴れた昼下がり、風に誘われ庭で遊ぶ<br>
+            夜はテラスで星を仰ぐ<br>
+            薪ストーブの炎が静かに夜をあたためる<br>
+            都会とは異なる時間軸の中で<br>
+            思索し、癒され、本来の自分に還る<br>
+            静かで上質な時が、思考と感性にそっと寄り添う
           </p>
         </div>
         <div class="col media concept-media">
@@ -67,7 +70,109 @@
       </div>
     </section>
 
-    <!-- 以下 VILLAS・FEATURES・GALLERY は既存のまま -->
+    <!-- VILLAS -->
+    <section id="villas" class="section">
+      <div class="container">
+        <div class="eyebrow">Villas</div>
+        <h2 class="hjp">邸宅</h2>
+        <div class="rule"></div>
+        <div class="grid-3">
+          <article class="card">
+            <figure class="ratio"><img src="assets/villa_a.jpg" alt="A棟 外観"></figure>
+            <div class="cap">
+              <div class="en">Villa A — Completed Sep 2025</div>
+              <div class="jp">A棟 — 2025年9月竣工</div>
+            </div>
+          </article>
+          <article class="card">
+            <figure class="ratio"><img src="assets/villa_b.jpg" alt="B棟 外観"></figure>
+            <div class="cap">
+              <div class="en">Villa B — Completed Sep 2025</div>
+              <div class="jp">B棟 — 2025年9月竣工</div>
+            </div>
+          </article>
+          <article class="card">
+            <figure class="ratio"><img src="assets/villa_c.jpg" alt="C棟 ロケーション（空撮）"></figure>
+            <div class="cap">
+              <div class="en">Villa C — Planned 2026</div>
+              <div class="jp">C棟 — 2026年計画</div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section id="features" class="section">
+      <div class="container">
+        <div class="eyebrow">Features</div>
+        <h2 class="hjp">特長</h2>
+        <div class="rule"></div>
+        <div class="grid-2">
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature1.jpg" alt="芝庭と眺望"></figure>
+            <div class="cap">
+              <div class="en">Garden Lawn & Panorama</div>
+              <div class="jp">大きな芝庭の先には小高い丘と大きな空が広がる軽井沢でも稀有な眺望を有します。</div>
+            </div>
+          </article>
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature2.jpg" alt="4LDK + 3台駐車"></figure>
+            <div class="cap">
+              <div class="en">4BR + Parking for 3</div>
+              <div class="jp">家族＋ゲスト、＋ご両親といったニーズにこたえる間取りとスペースをご用意しています。</div>
+            </div>
+          </article>
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature3.jpg" alt="ホテルライクな水回り"></figure>
+            <div class="cap">
+              <div class="en">Hotel-like Wet Areas</div>
+              <div class="jp">家族みんなで使ったり、ベッドルーム専用となったり可変する水回りを2か所ご用意しています。</div>
+            </div>
+          </article>
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature4.jpg" alt="アクティビティを愉しむ"></figure>
+            <div class="cap">
+              <div class="en">For Active Days</div>
+              <div class="jp">外部収納や自転車も置ける広い玄関、庭のバーベキュースペースなど、軽井沢でのアクティビティを愉しむ工夫を施しています。</div>
+            </div>
+          </article>
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature5.jpg" alt="確かな施工監修"></figure>
+            <div class="cap">
+              <div class="en">Trusted Construction Oversight</div>
+              <div class="jp">設計者自身が土地の選定、設計から施工までを一貫監修し、品質を担保。</div>
+            </div>
+          </article>
+          <article class="feat card">
+            <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
+            <div class="cap">
+              <div class="en">Location</div>
+              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- GALLERY -->
+    <section id="gallery" class="section">
+      <div class="container">
+        <div class="eyebrow">Gallery</div>
+        <h2 class="hjp">ギャラリー</h2>
+        <div class="rule"></div>
+        <div class="grid-2">
+          <figure class="card ratio"><img src="assets/gallery01.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery02.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery04.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery05.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery06.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery07.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery08.jpg" alt=""></figure>
+          <figure class="card ratio"><img src="assets/gallery10.jpg" alt=""></figure>
+        </div>
+      </div>
+    </section>
 
     <!-- RESERVE -->
     <section id="reserve" class="section">
@@ -81,9 +186,14 @@
             ご希望日時をメールまたはお電話にてお知らせください。
           </p>
           <div class="contacts">
-            <div>📞 <a href="tel:+819043762942">090-4376-2942</a></div>
-            <div>✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a></div>
-            <div>🌐 <a target="_blank" href="https://feeldo.co.jp/">https://feeldo.co.jp/</a></div>
+            <p>
+              お問い合わせ<br>
+              株式会社FEEL℃（フィールド）<br>
+              担当：後藤壮大<br>
+              📞 090-4376-2942<br>
+              ✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a><br>
+              🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
+            </p>
           </div>
           <div class="reserve-actions">
             <a class="btn-primary" href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問：">Mail to Reserve</a>
