--- a/index.html
+++ b/index.html
@@ -32,16 +32,11 @@
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
-        <h1 class="hero-title">
-          光と景色がひらける。心が晴れる。
-        </h1>
+        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
           ～景色と建築がとけあう軽井沢の邸～
         </p>
-        <div class="hero-cta">
-          <a class="btn-hero" href="#reserve">見学予約 / Mail to Reserve</a>
-        </div>
       </div>
     </section>
 
@@ -53,13 +48,10 @@
           <h2 class="hjp">コンセプト</h2>
           <div class="rule"></div>
           <p class="lead">
-            こころをほどき　ときをあむ<br>
-            晴れた昼下がり、風に誘われ庭で遊ぶ<br>
-            夜はテラスで星を仰ぐ<br>
-            薪ストーブの炎が静かに夜をあたためる<br>
-            都会とは異なる時間軸の中で<br>
-            思索し、癒され、本来の自分に還る<br>
-            静かで上質な時が、思考と感性にそっと寄り添う
+            こころをほどき　ときをあむ。<br>
+            晴れた昼下がり、風に誘われ庭で遊ぶ。夜はテラスで星を仰ぐ。薪ストーブの炎が静かに夜をあたためる。<br>
+            都会とは異なる時間軸の中で、思索し、癒され、本来の自分に還る。<br>
+            静かで上質な時が、思考と感性にそっと寄り添います。
           </p>
         </div>
         <div class="col media concept-media">
@@ -70,7 +62,7 @@
       </div>
     </section>
 
-    <!-- Villas / Features / Gallery 省略（前回のまま） -->
+    <!-- Villas・Features・Galleryは既存のまま -->
 
     <!-- RESERVE -->
     <section id="reserve" class="section">
@@ -84,14 +76,9 @@
             ご希望日時をメールまたはお電話にてお知らせください。
           </p>
           <div class="contacts">
-            <p>
-              お問い合わせ<br>
-              株式会社FEEL℃（フィールド）<br>
-              担当：後藤壮大<br>
-              📞 090-4376-2942<br>
-              ✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a><br>
-              🌐 <a href="https://feeldo.co.jp/" target="_blank">https://feeldo.co.jp/</a>
-            </p>
+            <div>📞 <a href="tel:+819043762942">090-4376-2942</a></div>
+            <div>✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a></div>
+            <div>🌐 <a target="_blank" href="https://feeldo.co.jp/">https://feeldo.co.jp/</a></div>
           </div>
           <div class="reserve-actions">
             <a class="btn-primary" href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問：">Mail to Reserve</a>
