--- a/index.html
+++ b/index.html
@@ -1,104 +1,135 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FEELDO VILLA | Minami-Karuizawa</title>
-  <meta name="description" content="光と景色がひらける。心が晴れる。FEEL℃ VILLA KARUIZAWA ～景色と建築がとけあう軽井沢の邸～">
-  <link rel="icon" href="favicon.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>FEELDO VILLA | 南軽井沢 | 自然と建築が響き合う邸</title>
+  <meta name="description" content="南軽井沢の明るく爽やかな空気を建築に取り込み、生活とひとつにする。FEEL℃ VILLA—自然と建築が響き合う軽井沢の邸。">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="icon" href="/favicon.png" sizes="any">
+  <link rel="preload" href="/assets/hero.jpg" as="image">
+  <link rel="stylesheet" href="/styles.css">
+  <script defer src="/script.js"></script>
 </head>
 <body>
-  <!-- Header -->
   <header class="header">
     <div class="container nav">
-      <a class="brand" href="#top">FEELDO VILLA</a>
-      <nav class="menu">
+      <a class="logo" href="#top" aria-label="FEEL℃">
+        <img src="/assets/logo.svg" alt="FEEL℃" height="28">
+        <span>FEEL℃</span>
+      </a>
+      <nav class="menu" aria-label="Primary">
         <a href="#concept">Concept</a>
         <a href="#villas">Villas</a>
         <a href="#features">Features</a>
-        <a href="#gallery">Gallery</a>
-        <a class="btn-ghost" href="#reserve">Reserve</a>
+        <a class="cta" href="#reserve">Reserve</a>
       </nav>
     </div>
   </header>
 
   <main id="top">
     <!-- HERO -->
-    <section class="hero">
-      <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
-      <div class="hero-copy container">
-        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
-        <p class="hero-lede">
-          FEEL℃ VILLA KARUIZAWA<br>
-          ～景色と建築がとけあう軽井沢の邸～
+    <section class="hero" aria-label="Hero">
+      <img class="bg" src="/assets/hero.jpg" alt="南軽井沢の広い空と芝庭">
+      <div class="shade"></div>
+      <div class="container copy">
+        <span class="kicker">MINAMI KARUIZAWA</span>
+        <h1 class="h1">
+          どこまでも抜ける眺望と　<span class="thin">時とともに晴れるこころ</span>
+        </h1>
+        <p class="lede">
+          南軽井沢の明るく爽やかで開放的な空気を建築に取り込み生活とひとつにする。<br>
+          FEEL℃ VILLA — 自然と建築が響き合う、軽井沢の邸。
         </p>
+        <div class="btns">
+          <a class="btn primary" href="#reserve">見学予約</a>
+          <a class="btn ghost" href="#concept">コンセプト</a>
+        </div>
       </div>
     </section>
 
     <!-- CONCEPT -->
-    <section id="concept" class="section">
-      <div class="container two-col">
-        <div class="col text">
-          <div class="eyebrow">Concept</div>
-          <h2 class="hjp">コンセプト</h2>
-          <div class="rule"></div>
-          <p class="lead">
-            こころをほどき　ときをあむ。<br>
-            晴れた昼下がり、風に誘われ庭で遊ぶ。夜はテラスで星を仰ぐ。薪ストーブの炎が静かに夜をあたためる。<br>
-            都会とは異なる時間軸の中で、思索し、癒され、本来の自分に還る。<br>
-            静かで上質な時が、思考と感性にそっと寄り添います。
-          </p>
-        </div>
-        <div class="col media concept-media">
-          <figure class="ratio">
-            <img src="assets/concept.jpg" alt="薪ストーブと自然が響き合う室内" class="concept-img">
-          </figure>
-        </div>
+    <section id="concept" class="section container reveal">
+      <span class="eyebrow">CONCEPT</span>
+      <h2>こころをほどき　ときをあむ</h2>
+      <p class="lead">
+        晴れた昼下がり、風に誘われ庭で遊ぶ。小高い丘と広い空を眺め、夜はテラスで星を仰ぐ。<br>
+        薪ストーブの炎が、静かに夜をあたためる。都会とは異なる時間軸の中で、思索し、癒され、本来の自分に還る。
+      </p>
+      <p class="lead">
+        静かで上質な時が、思考と感性にそっと寄り添います。
+      </p>
+      <div class="note">
+        <p>4LDK + 駐車3台。芝庭と大開口が導く、上質で凛とした時間。<br>
+        設計者自身が土地選定から施工までを一貫監修し、住まう人の体験価値を最優先に計画しました。</p>
       </div>
     </section>
 
-    <!-- Villas・Features・Galleryは既存のまま -->
+    <!-- VILLAS -->
+    <section id="villas" class="section container reveal">
+      <span class="eyebrow">VILLAS</span>
+      <h2>A棟・B棟（2025.9竣工）／ C棟（2026計画）</h2>
+      <p class="lead">
+        南軽井沢・72ゴルフ南コースを望む開放的な敷地に立つ3棟の邸。<br>
+        光と陰影の構成、素材の温度、眺望のフレーミング。<br>
+        FEEL℃が描く建築は、すべて「風景の中にある建築」です。
+      </p>
+
+      <div class="grid">
+        <article class="card">
+          <img src="/assets/hero.jpg" alt="A棟 外観">
+          <div class="body">
+            <div class="title">A棟</div>
+            <div class="meta">2025年9月竣工</div>
+          </div>
+        </article>
+        <article class="card">
+          <img src="/assets/hero.jpg" alt="B棟 外観">
+          <div class="body">
+            <div class="title">B棟</div>
+            <div class="meta">2025年9月竣工</div>
+          </div>
+        </article>
+        <article class="card">
+          <img src="/assets/hero.jpg" alt="C棟 外観（計画）">
+          <div class="body">
+            <div class="title">C棟</div>
+            <div class="meta">2026年 計画</div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section id="features" class="section container reveal">
+      <span class="eyebrow">FEATURES</span>
+      <h2>特長</h2>
+      <div class="features">
+        <!-- 各featureカードはここに配置 -->
+      </div>
+    </section>
 
     <!-- RESERVE -->
-    <section id="reserve" class="section">
-      <div class="container">
-        <div class="eyebrow">Reserve / Contact</div>
-        <h2 class="hjp">見学予約・お問い合わせ</h2>
-        <div class="rule"></div>
-        <div class="reserve card-inline">
-          <p class="lead">
-            見学予約は、土日・平日ともにご案内可能です。<br>
-            ご希望日時をメールまたはお電話にてお知らせください。
-          </p>
-          <div class="contacts">
-            <div>📞 <a href="tel:+819043762942">090-4376-2942</a></div>
-            <div>✉️ <a href="mailto:info@feeldo.co.jp">info@feeldo.co.jp</a></div>
-            <div>🌐 <a target="_blank" href="https://feeldo.co.jp/">https://feeldo.co.jp/</a></div>
-          </div>
-          <div class="reserve-actions">
-            <a class="btn-primary" href="mailto:info@feeldo.co.jp?subject=FEELDO%20VILLA%20見学予約&body=ご希望日時：%0D%0Aお名前：%0D%0Aご連絡先：%0D%0Aご質問：">Mail to Reserve</a>
-            <a class="btn-ghost" target="_blank" rel="noopener" href="https://maps.app.goo.gl/tqKMsfuVV3cmibBa7">📍 Google Mapsで見る</a>
-          </div>
-        </div>
+    <section id="reserve" class="section container reveal">
+      <span class="eyebrow">RESERVE / CONTACT</span>
+      <h2>見学予約・お問い合わせ</h2>
+      <div class="note">
+        <p>
+          見学予約は、土日（イベント日程）・平日（予約制）ともにご案内可能です。<br>
+          下記フォームより、ご希望日時をお知らせください。
+        </p>
+        <p>
+          株式会社FEEL℃（フィールド）<br>
+          担当：後藤壮大<br>
+          📞 090-4376-2942<br>
+          ✉️ info@feeldo.co.jp
+        </p>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="footer">
+  <footer>
     <div class="container foot">
-      <nav class="foot-links">
-        <a target="_blank" href="https://www.instagram.com/feeldo_official/">Instagram</a>
-        <span class="dot">•</span>
-        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78096645/">SUUMO A棟</a>
-        <span class="dot">•</span>
-        <a target="_blank" href="https://suumo.jp/ikkodate/nagano/sc_kitasakugun/nc_78142741/">SUUMO B棟</a>
-      </nav>
       <small>© FEEL℃</small>
     </div>
   </footer>
