--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Noto Sans JP（本文・見出し）＋ Playfair Display（英字ラベル） -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,400&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
@@ -28,13 +29,11 @@
   </header>
 
   <main id="top">
-    <!-- HERO -->
+    <!-- HERO（左下配置・黒背景×白文字・白枠ボタン） -->
     <section class="hero">
       <img class="hero-bg" src="assets/hero.jpg" alt="FEELDO VILLA hero">
       <div class="hero-copy container">
-        <h1 class="hero-title">
-          光と景色がひらける。心が晴れる。
-        </h1>
+        <h1 class="hero-title">光と景色がひらける。心が晴れる。</h1>
         <p class="hero-lede">
           FEEL℃ VILLA KARUIZAWA<br>
           ～景色と建築がとけあう軽井沢の邸～
@@ -45,7 +44,7 @@
       </div>
     </section>
 
-    <!-- CONCEPT -->
+    <!-- CONCEPT（詩的改行＋画像位置55%） -->
     <section id="concept" class="section">
       <div class="container two-col">
         <div class="col text">
@@ -70,7 +69,7 @@
       </div>
     </section>
 
-    <!-- VILLAS -->
+    <!-- VILLAS（3枚を16:9で統一） -->
     <section id="villas" class="section">
       <div class="container">
         <div class="eyebrow">Villas</div>
@@ -102,7 +101,7 @@
       </div>
     </section>
 
-    <!-- FEATURES -->
+    <!-- FEATURES（6枚・16:9統一・2列） -->
     <section id="features" class="section">
       <div class="container">
         <div class="eyebrow">Features</div>
@@ -148,14 +147,14 @@
             <figure class="ratio"><img src="assets/feature6.jpg" alt="立地"></figure>
             <div class="cap">
               <div class="en">Location</div>
-              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広い気持ちの良いエリアです。</div>
+              <div class="jp">南軽井沢72ゴルフコース沿いのほぼ最後のエリア。インターから渋滞をせずにアクセスでき、風通しが良く空がとても広いエリアです。</div>
             </div>
           </article>
         </div>
       </div>
     </section>
 
-    <!-- GALLERY -->
+    <!-- GALLERY（8枚：01,02,04,05,06,07,08,10） -->
     <section id="gallery" class="section">
       <div class="container">
         <div class="eyebrow">Gallery</div>
@@ -174,7 +173,7 @@
       </div>
     </section>
 
-    <!-- RESERVE -->
+    <!-- RESERVE（改行付き会社情報） -->
     <section id="reserve" class="section">
       <div class="container">
         <div class="eyebrow">Reserve / Contact</div>
@@ -204,7 +203,7 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer（Instagram / SUUMO） -->
   <footer class="footer">
     <div class="container foot">
       <nav class="foot-links">
